Fix for 'Play' never showing up on iOS

--- a/app/components/Body/_Body.scss
+++ b/app/components/Body/_Body.scss
@@ -10,7 +10,7 @@
 
 .header {
   font-size: 18px;
-  font-family: Montserrat, sans-serif;
+  font-family: 'helvetica neue', Montserrat, sans-serif;
   // border-bottom: 1px solid $border-color;
   margin: 5px 0 0px 0;
   padding: 0 4px 3px 4px;
